[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"
[project]
dependencies=[
   'lxml>=4.9.1',
   'requests>=2.28.1',
   'urllib3>=1.26.13'
]

name = "glooko"
version = "0.0.1"
authors = [
  { name="Patrick Miller", email="patrickdmiller@gmail.com" },
]
description = "glooko connector"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/patrickdmiller/glooko"



[options]
install_requires=[
   'lxml>=4.9.1',
   'requests>=2.28.1',
   'urllib3>=1.26.13'
]